--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "author": "iqbalchoironi",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-graphql": "^0.11.0",
+    "graphql": "^15.3.0",
+    "graphql-date": "^1.0.3",
+    "mongoose": "^5.9.26"
   }
 }
